# samsite

./: README.md  main.py  pyproject.toml
.github/: copilot-instructions.md  project-instructions-draft.md
config/: settings.py  urls.py
src/samsite/: __init__.py
